--- a/load.css
+++ b/load.css
@@ -3,8 +3,80 @@ body{
     padding: 0;
 }
 .loader{
-    background-color: #fff;
+    background-color: rgb(0, 0, 0);
     width: 100%;
     height: 100vh;
+    position: absolute;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box-loader{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    -moz-box-reflect: below 1px linear-gradient(transparent, #0004);
+    -ms-box-reflect: below 1px linear-gradient(transparent, #0004);
+    -o-box-reflect: below 1px linear-gradient(transparent, #0004);
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
+    animation: animate-box-loader 1.5s ease-in-out infinite;
+}
+@keyframes animate-box-loader {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-100px);
+    }
+}
+.cube-loader{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background-color: #03e9f4;
+    box-shadow: 0 0 5px rgba(3, 233, 244, 1),
+    0 0 25px rgba(3, 233, 244, 1),
+    0 0 50px rgba(3, 233, 244, 1),
+    0 0 100px rgba(3, 233, 244, 1),
+    0 0 200px rgba(3, 233, 244, 0.5);
+    transform-origin: bottom right;
+    animation:  animate-cube-loader 1.5s ease-in-out infinite;
+}
+@keyframes animate-cube-loader {
+    0%{
+        transform: rotate(0);
+    }
+    60%{
+        transform: rotate(90deg);
+    }
+    65%{
+        transform: rotate(85deg);
+    }
+    70%{
+        transform: rotate(90deg);
+    }
+    75%{
+        transform: rotate(87.5deg);
+    }
+    80%,100%{
+        transform: rotate(90deg);
+    }
     
+}
+@media (max-width:500px){
+    @keyframes animate-box-loader {
+        0%{
+            transform: translateX(0);
+        }
+        100%{
+            transform: translateX(-70px);
+        }
+    }
+    .cube-loader{
+        width: 70px;
+        height: 70px;
+    }
 }
