--- a/load.css
+++ b/load.css
@@ -11,6 +11,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .box-loader{
     position: relative;
@@ -43,7 +44,8 @@ body{
     0 0 100px rgba(3, 233, 244, 1),
     0 0 200px rgba(3, 233, 244, 0.5);
     transform-origin: bottom right;
-    animation:  animate-cube-loader 1.5s ease-in-out infinite;
+    animation:  animate-cube-loader 1.5s ease-in-out infinite,
+                cube-loader-rotate-color 10s linear infinite;
 }
 @keyframes animate-cube-loader {
     0%{
@@ -66,6 +68,63 @@ body{
     }
     
 }
+@keyframes cube-loader-rotate-color{
+    0%,100%{
+        background-color: #03e9f4;
+        box-shadow: 0 0 5px rgba(3, 233, 244, 1),
+        0 0 25px rgba(3, 233, 244, 1),
+        0 0 50px rgba(3, 233, 244, 1),
+        0 0 100px rgba(3, 233, 244, 1),
+        0 0 200px rgba(3, 233, 244, 0.5);
+    }
+    50%{
+        background-color: #b803f4;
+        box-shadow: 0 0 5px rgb(184, 3, 244),
+        0 0 25px rgb(184, 3, 244),
+        0 0 50px rgb(184, 3, 244),
+        0 0 100px rgb(184, 3, 244),
+        0 0 200px rgba(184, 3, 244, 0.5);
+    }
+}
+.content-loader{
+    position: absolute;
+    width: 100%;
+    height: 50vh;
+    top: 0;
+    color: #03e9f4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: x-large;
+    text-shadow:0 0 5px #03e9f4,
+                0 0 25px #03e9f4;
+    animation: content-loader-rotate-color 10s linear infinite;;
+}
+@keyframes content-loader-rotate-color {
+    0%,100%{
+        color: #03e9f4;
+        text-shadow:0 0 5px #03e9f4,
+                0 0 25px #03e9f4;
+    }
+    50%{
+        color: #b803f4;
+        text-shadow:0 0 5px #b803f4,
+                0 0 25px #b803f4;
+    }
+}
+.content-loader span{
+    margin-left: 5px;
+    animation: animate-content-loader-span 1.5s linear infinite;
+    animation-delay: var(--i);
+}
+@keyframes animate-content-loader-span {
+    0%,100%{
+        opacity: 1;
+    }
+    50%{
+       opacity: 0;
+    }
+}
 @media (max-width:500px){
     @keyframes animate-box-loader {
         0%{
@@ -78,5 +137,19 @@ body{
     .cube-loader{
         width: 70px;
         height: 70px;
+    }
+}
+@media (max-width:390px){
+    @keyframes animate-box-loader {
+        0%{
+            transform: translateX(0);
+        }
+        100%{
+            transform: translateX(-50px);
+        }
+    }
+    .cube-loader{
+        width: 50px;
+        height: 50px;
     }
 }
